namespaces/iam/ory-kratos/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ory-kratos
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ory-kratos
  template:
    metadata:
      labels:
        app: ory-kratos
    spec:
      volumes:
        - name: kratos-config
          configMap:
            name: kratos-config
      containers:
        - name: ory-kratos
          image: oryd/kratos:v26.2
          args: ["serve", "--config", "/etc/config/kratos.yml"]
          volumeMounts:
            - name: kratos-config
              mountPath: /etc/config
              readOnly: true

          ports:
            - name: http
              containerPort: 4433
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "1"
              memory: "1Gi"
