namespaces/iam/ory-kratos/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ory-kratos
spec:
  selector:
    app: ory-kratos
  ports:
    - name: http
      port: 4433
      targetPort: http
